fix potential security vulnerabilities in dependencies fix comment's in index.pug

--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -1,7 +1,7 @@
-// подключение секции head
+//- подключение секции head
 extends ../../components/head/head
-// вывод титула страницы
+//- вывод титула страницы
 block title
     | index
-// You code it here
+//- You code it here
 block main
